# get-based

./: .dockerignore  .env.local.example  .gitignore  BRAND.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  THIRD_PARTY_LICENSES.md  dev-server.js  index.html  manifest.json  package-lock.json  package.json  robots.txt  run-tests.js  run-tests.sh  service-worker.js  sitemap.xml  styles.css  themes-extra.css  update-vendor.sh  vercel.json  version.js  vitest.config.js
.github/: dependabot.yml
.well-known/: mcp.json
api/: commit.js  proxy.js
brands/: README.md  STATUS.md  sync-to-site.sh
css/: app-shell.css  category-views.css  chat-actions.css  chat-composer.css  chat-messages.css  chat-mobile.css  chat-onboarding.css  chat-panel.css  chat-personality.css  chat-redesign.css  chat-responsive.css  client-list.css  context-profile.css  cycle.css  dashboard-core.css  dashboard-data.css  dashboard-welcome.css  dashboard-widgets.css  data-protection.css  emf.css  genetics.css  import.css  light-channels.css  light-conditions-now.css  light-devices.css  light-env.css  light-setup.css  light-sun.css  light-tools.css  marker-detail-modal.css  mobile-dashboard.css  modal-shared.css  recommendations.css  redesign-chat.css  redesign-shell.css  settings.css  wearables.css
data/: demo-female.json  demo-male.json  haplogroups.json  light-device-presets.json  mito-compounds.json  recommendations.example.json  recommendations.json  snp-health.json  sun-action-spectra.json
deploy/: nginx.conf
dev-docs/: README.md  ai-surfaces-map.md  architecture.md  context-assembly.md  cross-module-patterns.md  deployment.md  index.md  lens-endpoint-contract.md  module-reference.md  sun-spectrum-model.md  testing.md
dist-docs/: 404.html  hashmap.json  index.html
electron/: archive.js  entitlements.mac.plist  gpu.js  lens-manager.js  main.js  paths.js  preload.cjs  setup.js
js/: ai-verdict-engine.js  api-provider-storage.js  api-transport.js  api.js  app-ai-interaction-modules.js  app-data-io-modules.js  app-event-listeners.js  app-feature-modules.js  app-foundation-modules.js  app-health-data-modules.js  app-light-sun-modules.js  app-ui-shell-modules.js  backup.js  blob-storage.js  brand-assets.js  cashu-wallet.js  category-customization.js  category-glyphs.js  category-page-view.js  charts.js  (+252 more)
lens/: pyproject.toml
lens/src/lens/: __init__.py  api_key.py  cli.py  config.py  embedder.py  ingest.py  registry.py  server.py  store.py
src-tauri/: Cargo.toml  UPDATER_SETUP.md  build-frontend.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: gpu.rs  lens.rs  lens_source.rs  main.rs  setup.rs
(+237 files in other folders)
