[package]
name = "getbased"
version = "1.20.0"
description = "getbased — Open-Source Health Dashboard with AI"
authors = ["Elkim"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
log = "0.4"
dirs = "6"
sha2 = "0.10"
hex = "0.4"
# Native archive extraction (no system tar dependency)
flate2 = "1"
zstd = "0.13"
zip = "2"
tar = "0.4"
sysinfo = "0.32"
# Bundle lens/ Python source into the binary at compile time
include_dir = "0.7"
# Windows GPU detection via WMI
[target.'cfg(windows)'.dependencies]
wmi = "0.14"

[profile.release]
strip = true
lto = true
codegen-units = 1
